<resources>
    <string name="app_name">BNet</string>
    <string name="main_header">BNet Database</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_label">Sign in</string>
    <string name="register_label">Register</string>
    <string name="empty_fields_msg">Some of the fields are empty!</string>
    <string name="username_is_taken_msg">Username is already taken!</string>
    <string name="password_or_username_incorrect">Password or Username Incorrect</string>
    <string name="add_business_button">Add Business</string>
    <string name="add_activity_button">Add Activity</string>
    <string name="business_name_hint">Name</string>
    <string name="business_address_hint">Address</string>
    <string name="business_phone_hint">Phone Number</string>
    <string name="business_email_hint">Email</string>
    <string name="business_website_hint">Website</string>
    <string name="submit_button_string">Submit</string>
    <string name="title_activity_editor">Activity Editor</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="connecting_to_server">Connecting to server…</string>
    <string name="error_header">"Error: "</string>
    <string name="sign_out">Sign out</string>
    <string name="error_field_empty">The field %s can\'t be empty!</string>
    <string name="select_business">Select Business</string>
    <string name="activity_details">Activity Details</string>
    <string name="price">Price($)</string>
    <string name="description_hint">Description\nWrite a few words about the activity.</string>
    <string name="business_id">Business ID</string>
    <string name="remember_me">Remember me</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="end_time">End Time:</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="start_date">Start Date</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="activity_was_added">Activity was added</string>
    <string name="server_unavailable">The server is unavailable at this time</string>
    <string name="business_details">Business details</string>
    <string name="title_business_editor">Business Editor</string>
    <string name="welcome_back">Welcome back</string>
    <string name="click_back_again_to_logout">Please click BACK again to logout</string>
</resources>
