<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_business_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bnet.data.controller.BusinessEditor">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:text="Business details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/headerLabel"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_below="@id/headerLabel"
        android:id="@+id/nameField"
        android:hint="@string/business_name_hint"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:id="@+id/countryField"
        android:layout_below="@id/nameField"
        android:hint="@string/country" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:id="@+id/cityField"
        android:layout_below="@id/countryField"
        android:hint="@string/city" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:id="@+id/streetField"
        android:layout_below="@id/cityField"
        android:hint="@string/street" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/phoneField"
        android:layout_below="@id/streetField"
        android:hint="@string/business_phone_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
android:layout_below="@id/phoneField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/emailField"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/business_email_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebEditText"
        android:layout_below="@id/emailField"
        android:id="@+id/websiteField"
        android:hint="@string/business_website_hint" />
        <Button
            android:text="@string/submit_button_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/websiteField"
            android:layout_marginTop="30dp"
            android:layout_alignParentRight="true"
            android:id="@+id/submitBtn" />
    </RelativeLayout>
    </ScrollView>


</RelativeLayout>
