<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bnet.data.controller.ActivityEditor">
    <ScrollView android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/activiy_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:id="@+id/textView"
                android:textSize="20sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:id="@+id/typeSpinner"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:id="@+id/countryField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/typeSpinner"
                android:hint="@string/country"/>
            <LinearLayout
                android:id="@+id/startDateLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/countryField">
                <Button
                    android:id="@+id/setStartDateBtn"
                    android:text="@string/start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/endDateLinear"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/startDateLinear">
                <Button
                    android:id="@+id/setEndDateBtn"
                    android:text="@string/end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/priceField"
                android:hint="@string/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_below="@id/endDateLinear"/>
            <EditText
                android:id="@+id/descriptionField"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_hint"
                android:layout_below="@id/priceField"/>

            <Spinner
                android:id="@+id/businessSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descriptionField"/>
            <Button
                android:text="@string/submit_button_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/businessSpinner"
                android:id="@+id/submitBtn" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
